@@ -65,6 +65,8 @@ Other related software
 ImportRPL Digital Micrograph plugin
 -----------------------------------
 
+Last version date: 04/11/2011
+
 This Digital Micrograph plugin is designed to import Ripple files into Digital Micrograph. It is used to easy data transit between DigitalMicrograph and Hyperspy without losing the calibration using the extra keywords that Hyperspy adds to the standard format.
 
 When executed it will ask for 2 files:
@@ -76,6 +78,7 @@ If a file with the same name and path as the riple file exits
 with raw or bin extension it is opened directly without prompting
 
 ImportRPL was written by Luiz Fernando Zagonel.
+
 
 `Download ImportRPL <http://hyperspy.org/hyperspy-doc/dev/_static/importRPL.s>`_
 
