@@ -161,6 +161,7 @@
 <h2>Other related software<a class="headerlink" href="#other-related-software" title="Permalink to this headline">¶</a></h2>
 <div class="section" id="importrpl-digital-micrograph-plugin">
 <span id="import-rpl"></span><h3>ImportRPL Digital Micrograph plugin<a class="headerlink" href="#importrpl-digital-micrograph-plugin" title="Permalink to this headline">¶</a></h3>
+<p>Last version date: 04/11/2011</p>
 <p>This Digital Micrograph plugin is designed to import Ripple files into Digital Micrograph. It is used to easy data transit between DigitalMicrograph and Hyperspy without losing the calibration using the extra keywords that Hyperspy adds to the standard format.</p>
 <p>When executed it will ask for 2 files:</p>
 <ol class="arabic simple">
