@@ -121,6 +121,7 @@
   <div class="section" id="news">
 <h1>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h1>
 <ul class="simple">
+<li>A new version of the ImportRPL Digital Micrograph plugin has been released to fix a bug concerning reading of SIs. See <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a></li>
 <li>The first beta version of Hyperspy 0.3.0 has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li>The next Hyperspy training will be on the 24th in Cambridge (UK). See <a class="reference internal" href="trainings.html#trainings"><em>Trainings</em></a>.</li>
 <li><strong>The Hyperspy development is now open</strong>: We&#8217;re pleased to announce that Hyperspy now lives in a public repository, see <a class="reference internal" href="developer.html#developer-zone"><em>Developer Zone</em></a> for more details.</li>
