@@ -1,5 +1,6 @@
 News
 ====
+* A new version of the ImportRPL Digital Micrograph plugin has been released to fix a bug concerning reading of SIs. See :ref:`import-rpl`
 * The first beta version of Hyperspy 0.3.0 has been released! See :ref:`beta-releases`
 * The next Hyperspy training will be on the 24th in Cambridge (UK). See :ref:`trainings`.
 * **The Hyperspy development is now open**: We're pleased to announce that Hyperspy now lives in a public repository, see :ref:`developer-zone` for more details.
